# sbtVerifier

./: .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  run.sh  tsconfig.json
.github/workflows/: docker-publish.yml
src/: didHandler.ts  digestHandler.ts  index.ts  main.rs  signatureHandler.ts  test.json  zkp_result.json
src/helpers/: cal_roothash.rs  mod.rs
