[package]
name = "sbtVerifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# todo: update the dependency of miden (with the version `0.5`)
miden-vm = {git = "https://github.com/jonathanxuu/miden.git", branch = "dev", default-features = false}
hex = { version = "0.4", default-features = false, optional = true }
sha3 = "0.10.6"
winter-utils = { package = "winter-utils", version = "0.6", default-features = false }
miden-crypto = { package = "miden-crypto", version = "0.2", default-features = false }

[features]
default = ["std"]
std = [ "hex/std", "miden-vm/std"]
